hphp/test/slow/ext_hsl/close_stdout_then_php_write.php.expect
Closing STDOUT
Error: 'Not a valid stream resource' at line 17
STDERRR is still alive
